--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <!--
         add CONSUMER_KEY(API Key) and CONSUMER_SECRET(API Secret)
     -->
-    <string name="com.twitter.sdk.android.CONSUMER_KEY">50MvhxnXFgVfoKC38FfSxI8Hw</string>
-    <string name="com.twitter.sdk.android.CONSUMER_SECRET">E0JVEMsn4jSPDApH8gIVr8wyFwtHiigC4fXM8XAzMpCwYJvuvW
+    <string name="com.twitter.sdk.android.CONSUMER_KEY">Enter your CONSUMER_KEY</string>
+    <string name="com.twitter.sdk.android.CONSUMER_SECRET">Enter your CONSUMER_SECRET
 </string>
 
 </resources>
